--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">TipCalc</string>
     <string name="main.hint.bill">Total</string>
     <string name="main.button.submit">Calcular</string>
-    <string name="main.hint.percentege">% de Propina</string>
+    <string name="main.hint.percentage">% de Propina</string>
     <string name="main.button.increase">+</string>
     <string name="main.button.decrease">-</string>
     <string name="main.button.clear">Borrar recientes</string>
