--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,10 @@
     <string name="main.button.decrease">-</string>
     <string name="main.button.clear">Borrar recientes</string>
     <string name="main.menu.action.about">About</string>
-    <string name ="global.message.tip.about">Propina %,.lf</string>
-    <string name="tipdetail.message.bill">Total %,.lf</string>
+    <string name="global.message.tip">Propina %,.1f</string>
+
+    <string name="tipdetail.message.bill">Total %,.1f</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
